# awe

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  svelte.config.js  vite.config.js
src/: app.html
src-tauri/: .gitignore  Cargo-orig.toml  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: autonomi_client.rs  autonomi_protocols.rs  autonomi_websites.rs  awe_client.rs  awe_const.rs  awe_protocols.rs  awe_subcommands.rs  awe_website_metadata.rs  awe_website_publisher.rs  awe_website_versions.rs  awe_websites.rs  cli_options.rs  commands.rs  connect.rs  generated_rs.rs  lib.rs  main-orig.rs  main.rs
src-tauri/src/commands/: awe_subcommands.rs  cmd_inspect.rs  cmd_inspect_register.rs  helpers.rs
src-tauri/src/dweb/: awe_client.rs  awe_website_metadata.rs  awe_website_publisher.rs  awe_website_versions.rs  client.rs  data.rs  mod.rs  trove.rs
src-tauri/src/dweb/autonomi/: connect.rs
src-tauri/src/dweb/autonomi/access/: keys.rs
src-tauri/src/dweb/autonomi/wallet/: encryption.rs  fs.rs  mod.rs
src-tauri/src/dweb/data/: awe_website_publisher.rs  awe_website_versions.rs  mod.rs
src-tauri/src/dweb/helpers/: convert.rs
src-tauri/src/dweb/helpers/autonomi/: connect.rs  mod.rs
src-tauri/src/dweb/trove/: file_tree.rs
src-tauri/src/generated_rs/: builtins_local.rs  builtins_public.rs
src-tauri/src/helpers/: mod.rs
src-tauri/src/helpers/autonomi/: connect.rs
src-tauri/src/helpers/autonomi/access/: keys.rs
src-tauri/src/helpers/autonomi/wallet/: encryption.rs  fs.rs  mod.rs
src-tauri/src/subcommands/: mod.rs  web.rs
src/lib/: AddressBar.svelte  AutonomiFetch.svelte  Greet.svelte  Navigation.svelte  WebsiteView.svelte  stores.js
src/routes/: +layout.js  +page.svelte  +page.svelte-orig
