[package]
name = "awe"
version = "0.11.0"
description = "Autonomi Web Browser and Publisher (demo)"
authors = ["Mark <git@happybeing.com>"]
license = "AGPL-3.0"
repository = "https://github.com/happybeing/awe"
default-run = "awe"
edition = "2021"
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "awe_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[features]
# updated for autonomi v0.3.4
default = ["skip-network-compatibility-check"]
ametrics = ["ant-logging/process-metrics"]
development = []
skip-network-compatibility-check = []   # Avoid need to upload avp type and include xor address in build
nightly = []

# This feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[dependencies]
# Tauri v2 dependencies
tauri = { version = "2.0.0-rc.0", features = [] }
tauri-plugin-shell = "2.0.0-rc.0"
tauri-plugin-http = "2.0.0-rc.0"
http = "1.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


### Dependencies for an Autonomi client

# Generated using: awe-dependencies --branch main --ant-path ../../autonomi
autonomi = { version = "0.3.4", path = "../../autonomi/autonomi", features = [ "loud", ]}
ant-bootstrap = { version = "0.1.4", path = "../../autonomi/ant-bootstrap" }
ant-build-info = { version = "0.1.23", path = "../../autonomi/ant-build-info" }
ant-logging = { version = "0.2.45", path = "../../autonomi/ant-logging" }
ant-networking = { version = "0.3.4", path = "../../autonomi/ant-networking" }
ant-protocol = { version = "0.3.3", path = "../../autonomi/ant-protocol" }

# Generated using: awe-dependencies --branch stable
# autonomi = { version = "0.3.1", features = [
#     "fs",
#     "vault",
#     "registers",
#     "loud",
# ] }
# ant-bootstrap = { version = "0.1.1" }
# ant-build-info = { version = "0.1.21" }
# ant-logging = { version = "0.2.42" }
# ant-networking = { version = "0.3.1" }
# ant-protocol = { version = "0.3.1" }
# ant-registers = { version = "0.4.5" }

## Local: dweb
dweb = { path = "../../../autonomi/dweb/dweb-lib", version = "0.2.0", features = ["development"] }
# dweb = { version = "0.2.0", features = ["development"] }

## Everything else
rand = { version = "~0.8.5", features = ["small_rng"] }
anyhow = "1.0.81"
async-stream = "0.3.5"
bytes = "1.6.0"
futures = "0.3.30"
indicatif = { version = "0.17.5", features = ["tokio"] }
log = "0.4.21"
multiaddr = "0.18.1"
tempfile = "3.10.1"
xor_name = "5.0.0"
color-eyre = "0.6.3"
env_logger = "0.11.3"
dirs-next = "2.0.0"
structopt = "0.3.26"
clap = "4.5.4"
walkdir = "~2.5.0"
chrono = { version = "0.4.37", features = ["serde"] }
rmp-serde = "1.1.2"
self_encryption = "0.29.1"
crdts = "7.3.2"
url = "2.5.0"
regex = "1.9.6"
ring = "0.17.8"
prettytable = "0.10.0"
const-hex = "1.13.1"
hex = "0.4.3"
rpassword = "7.3.1"
thiserror = "2.0.0"

[target."cfg(windows)".dependencies]
windows = { version = "0.56.0", features = ["Win32_System_Console", "Win32_Foundation"] }

[profile.dev]
debug = 0

[profile.release]
debug = 0

